fixign menu item alignment

--- a/static/css/cards/menu.css
+++ b/static/css/cards/menu.css
@@ -61,6 +61,7 @@
 .main-nav .expander {
   align-self: stretch;
   justify-content: space-between;
+  text-align: left;
 }
 
 .main-nav .subsection a {
